frontend/src/styles/center/profile.css
/* frontend/src/styles/center/profile.css */

/* header */
.banner {
    width: 600px;
    height: 150px;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover; 
}

.banner--fallback {
    background-color: var(--hover-blue);
}

.without-banner {
    position: relative;
    top: -50px;
}

.profile-icon {
    position: absolute;
    left: 10px;
    top: 0;
    border: 2px solid var(--darkest-blue);
}

.without-header {
    padding-left: 15px;
}

.username-display {
    padding-top: 2px;
    padding-bottom: 8px;
}

/* buttons */
.button-follow,
.button-edit {
    margin-top: 60px;
    margin-left: 450px;
}

/* bio and stats */
.user-stats,
.user-bio {
    padding-bottom: 10px;
}

.indiv-stats {
    display: flex;
    gap: 4px; 
}

.user-stats {
    display: flex;
}

.stat {
    display: inline;
}

.stat:hover {
    color: var(--lightest-blue);
    text-decoration: underline;
    text-decoration-color: var(--white);
}

.users-common {
    padding-bottom: 5px;
}

/* tabs */
.user-tabs {
    padding: 14px 14px 13px 14px;
    border-bottom: 1px solid var(--debug-center);
}

.profile-tab {
    text-decoration: none;
    padding: 13px;
}

.profile-tab:hover {
    background-color: var(--hover-blue);
}

